--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 go:
-  - "1.11"
+  - "1.12"
 
 os:
   - linux
@@ -8,7 +8,6 @@ os:
 
 before_install:
   - sudo apt-get install -y gnome-keyring libsecret-common
-  - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 
 before_script:
-  - dep ensure
+  - GO111MODULE=on go mod vendor
