fix ubuntu deps

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,9 @@ jobs:
       - name: Disable EOL conversions
         run: git config --global core.autocrlf false
       - name: install ubuntu deps
-        run: sudo apt-get install libsecret-1-dev dbus gnome-keyring python-keyring
+        run: > 
+          sudo apt-get install libsecret-1-dev dbus gnome-keyring python-keyring && 
+          dbus-launch /usr/bin/python -c "import gnomekeyring;gnomekeyring.create_sync('login', '');"
         if: matrix.operating-system == 'ubuntu-18.04'
 
       - name: Checkout
