--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,3 +1,4 @@
+---
 name: test
 
 on: [push, pull_request]
@@ -15,8 +16,13 @@ jobs:
       - name: Disable EOL conversions
         run: git config --global core.autocrlf false
       - name: install ubuntu deps
-        run: > 
-          sudo apt-get install libsecret-1-dev dbus dbus-x11 gnome-keyring python-keyring && 
+        run: |
+          sudo apt install libsecret-1-dev dbus dbus-x11 gnome-keyring python-keyring
+          export DISPLAY=“:0.0”
+          eval "$(dbus-launch --sh-syntax)"
+          mkdir -p ~/.cache
+          mkdir -p ~/.local/share/keyrings
+          eval $(gnome-keyring-daemon --start)
           dbus-launch /usr/bin/python -c "import gnomekeyring;gnomekeyring.create_sync('login', '');"
         if: matrix.operating-system == 'ubuntu-18.04'
 
