--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: install ubuntu deps
         run: |
           sudo apt install libsecret-1-dev dbus dbus-x11 gnome-keyring
-          pip install secretstorage dbus-python
+          pip install secretstorage #dbus-python
           pip install keyring
           export DISPLAY=“:0.0”
           eval "$(dbus-launch --sh-syntax)"
