--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,7 @@ jobs:
         run: git config --global core.autocrlf false
       - name: install ubuntu deps
         run: |
-          sudo apt install libsecret-1-dev dbus dbus-x11 gnome-keyring libdbus-glib-1-dev
+          sudo apt install libsecret-1-dev dbus dbus-x11 gnome-keyring libdbus-glib-1-dev python3-setuptools
           pip3 install secretstorage #dbus-python
           pip3 install keyring
           export DISPLAY=“:0.0”
