--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,8 +16,9 @@ jobs:
         run: git config --global core.autocrlf false
       - name: install ubuntu deps
         run: |
-          sudo apt-get remove python-cryptography
-          sudo apt-get remove python3-cryptography
+          sudo apt remove python-cryptography
+          sudo apt remove python3-cryptography
+          sudo apt autoremove
           apt show python-cryptography 
           sudo apt install libsecret-1-dev dbus dbus-x11 gnome-keyring libdbus-glib-1-dev python3-setuptools
           pip3 install secretstorage keyring #dbus-python
@@ -26,7 +27,7 @@ jobs:
           mkdir -p ~/.cache
           mkdir -p ~/.local/share/keyrings
           eval $(gnome-keyring-daemon --start)
-          echo "asd" | keyring -p ~/.local/share/keyrings/login.keyring set "test" "username"
+          echo "asd" | /usr/bin/keyring -p ~/.local/share/keyrings/login.keyring set "test" "username"
           #dbus-launch /usr/bin/python -c "import keyring; keyring.get_keyring(); keyring.set('test', 'username', 'password')"
           #dbus-launch /usr/bin/python -c "import gnomekeyring; gnomekeyring.create_sync('login', '');"
         if: matrix.operating-system == 'ubuntu-18.04'
