--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,8 +27,7 @@ jobs:
           mkdir -p ~/.cache
           mkdir -p ~/.local/share/keyrings
           eval $(gnome-keyring-daemon --start)
-          echo "KEYRING:: $(which keyring)"
-          echo "asd" | $(which keyring) -p ~/.local/share/keyrings/login.keyring set "test" "username"
+          echo "asd" | dbus-launch $(which keyring) -p ~/.local/share/keyrings/login.keyring set "test" "username"
           #dbus-launch /usr/bin/python -c "import keyring; keyring.get_keyring(); keyring.set('test', 'username', 'password')"
           #dbus-launch /usr/bin/python -c "import gnomekeyring; gnomekeyring.create_sync('login', '');"
         if: matrix.operating-system == 'ubuntu-18.04'
