windows only upload step

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -33,6 +33,13 @@ jobs:
         run: go build --ldflags "-X main.version=${{ matrix.operating-system }}.${{ github.run_id }}.${{ github.run_number }}"
 
       - uses: actions/upload-artifact@v2
+        if: "startsWith(runner.os, 'ubuntu') || startsWith(runner.os, 'macOS')"
         with:
           name: "artifact-${{ matrix.operating-system }}.${{ github.run_id }}.${{ github.run_number }}"
           path: ./2ami
+
+      - uses: actions/upload-artifact@v2
+        if: "startsWith(runner.os, 'windows')"
+        with:
+          name: "artifact-${{ matrix.operating-system }}.${{ github.run_id }}.${{ github.run_number }}"
+          path: ./2ami.exe
