testing using envs from asdf

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: install Go
         uses: actions/setup-go@v1
         with: 
-          go-version: "${{fromJson(steps.versions.outputs.tools).golang}}"
+          go-version: "${{ env.GOLANG_VERSION }}"
 
       - name: Run tests
         run: go test -v
