--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -8,7 +8,7 @@ on:
       - master
 
 jobs:
-  prerelease:
+  nightly:
     strategy:
       matrix:
         operating-system: [ubuntu-20.04, windows-2019, macOS-10.14]
