workflows/release: checkout in create-release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ jobs:
   create-release:
     runs-on: ubuntu-20.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: get tag annotation
         run: ::set-output name=content::$(git tag --format='%(contents)' -n2 ${{ github.ref }})
         id: notes
