--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,12 @@ jobs:
         run: echo "::set-output name=flag::$(grep '-' ${{github.ref}} && echo --prerelease)"
         id: prerelease
 
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=version::$(echo $GITHUB_REF | cut -d / -f 3)
+
       - name: create release
-        run: gh release create ${{ github.ref }} --draft --title ${{ github.ref }} ${{steps.prerelease.outputs.flag}} --notes '${{ steps.notes.outputs.content }}'
+        run: gh release create ${{ steps.get_version.outputs.version }} --draft --title ${{ github.ref }} ${{steps.prerelease.outputs.flag}} --notes '${{ steps.notes.outputs.content }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
