--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,10 @@ jobs:
 
       - name: Get the version
         id: get_version
-        run: echo ::set-output name=version::$(echo $GITHUB_REF | cut -d / -f 3)
+        run: echo ::set-output name=version::$(echo ${{ github.ref }} | cut -d / -f 3)
 
       - name: create release
-        run: gh release create ${{ steps.get_version.outputs.version }} --draft --title ${{ github.ref }} ${{steps.prerelease.outputs.flag}} --notes '${{ steps.notes.outputs.content }}'
+        run: gh release create ${{ steps.get_version.outputs.version }} --draft --title ${{ steps.get_version.outputs.version }} ${{steps.prerelease.outputs.flag}} --notes '${{ steps.notes.outputs.content }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
