--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,19 +59,19 @@ jobs:
 
       - name: upload to release (linux)
         if: "startsWith(runner.os, 'Linux')"
-        run: gh release upload ${{github.ref}} ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}
+        run: gh release upload ${{ needs.create-release.outputs.version }} ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: upload to release (macos)
         if: "startsWith(runner.os, 'macOS')"
-        run: gh release upload ${{github.ref}} ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}
+        run: gh release upload ${{ needs.create-release.outputs.version }} ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: upload to release (windows)
         if: "startsWith(runner.os, 'Windows')"
-        run: gh release upload ${{github.ref}} ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}.exe
+        run: gh release upload ${{ needs.create-release.outputs.version }} ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
