--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: endorama/asdf-parse-tool-versions@v1.0.0-rc.1
+      - uses: endorama/asdf-parse-tool-versions@v1.0.0
         id: versions
 
       - name: install Go
