--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,18 +57,46 @@ jobs:
       - name: Build the CLI
         run: go build -trimpath --ldflags "-X main.version=${{ needs.create-release.outputs.version }}" -o 2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}
 
-      - name: upload to release
+      - name: upload to release - linux
+        if: "startswith(runner.os, 'linux')"
         run: gh release upload ${{ needs.create-release.outputs.version }} ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: create checksum
-        if: "startswith(runner.os, 'linux')"
-        run: sha256sum 2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }} > checksum-2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}.txt
-      - name: upload to release
-        run: gh release upload ${{ needs.create-release.outputs.version }} ./checksum-2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}.txt
+      - name: upload to release - macOS
+        if: "startswith(runner.os, 'macOS')"
+        run: gh release upload ${{ needs.create-release.outputs.version }} ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: upload to release - Windows
+        if: "startswith(runner.os, 'Windows')"
+        run: gh.exe release upload ${{ needs.create-release.outputs.version }} ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        with:
+          limit-access-to-actor: true
+
+      - name: create checksum - linux
+        if: "startswith(runner.os, 'linux')"
+        run: sha256sum 2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }} > checksum-2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}.txt
+
+      - name: create checksum - macOS
+        if: "startswith(runner.os, 'macOS')"
+        run: shasum -a 256 2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }} > checksum-2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}.txt
+
+      - name: create checksum - Windows
+        if: "startswith(runner.os, 'Windows')"
+        run: Get-FileHash -Algorithm SHA256 -Path ./2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}
+        
+
+      # - name: upload to release
+      #   run: gh release upload ${{ needs.create-release.outputs.version }} ./checksum-2ami-${{ needs.create-release.outputs.version }}-${{ matrix.operating-system }}.txt
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: upload to release (linux)
       #   if: "startsWith(runner.os, 'Linux')"
