--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: endorama/asdf-parse-tool-versions@1
+      - uses: endorama/asdf-parse-tool-versions@v1
         id: versions
 
       - name: install Go
@@ -42,7 +42,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: endorama/asdf-parse-tool-versions@1
+      - uses: endorama/asdf-parse-tool-versions@v1
         id: versions
 
       - name: install Go
