ci: task installation need token

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Install Task
         uses: arduino/setup-task@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: install Go
         uses: actions/setup-go@v1
